# pezkuwi-sdk

./: .gitignore  .gitlab-ci.yml  BETA_TESTNET_SETUP.md  BROKEN_SCRIPTS_REPORT.md  Cargo.toml  FINAL_CLEANUP_SUMMARY.md  LICENSE  Plan.toml  README.md  TESTNET_FIX_NOTES.md  USDT_SWAP_ISSUE_REPORT.md  benchmark-genesis.json  package-lock.json  package.json  pezkuwi-local-raw.json  pezkuwi-staging-raw.json  pezkuwichain-beta-testnet.json  rust-toolchain.toml
bridges/chains/chain-bridge-hub-cumulus/: Cargo.toml
bridges/chains/chain-westend/: Cargo.toml
cumulus/client/network/: Cargo.toml
cumulus/client/relay-chain-minimal-node/: Cargo.toml
cumulus/primitives/core/: Cargo.toml
pezkuwi/: Cargo.toml  README.md  build.rs  file_header.txt
pezkuwi/.rpm/: polkadot.spec
pezkuwi/cli/: Cargo.toml  build.rs
pezkuwi/cli/src/: cli.rs  command - backup.rs  command.rs  error.rs  lib.rs
pezkuwi/core-primitives/: Cargo.toml
pezkuwi/core-primitives/src/: lib.rs
pezkuwi/doc/: shell-completion.md
pezkuwi/docs/: API_PALLET_PEZ_TREASURY.md  API_PALLET_TIKI.md  API_PALLET_WELATI.md  DEPLOYMENT_GUIDE.md  DISASTER_RECOVERY.md  FUTURE_PALLETS_ROADMAP.md  LOAD_TESTING_GUIDE.md  MONITORING_GUIDE.md  OPERATIONAL_RUNBOOKS.md  PERFORMANCE_BENCHMARKING.md  PRODUCTION_READINESS_CHECKLIST.md  RUNTIME_UPGRADES.md  SECURITY_AUDIT_REPORT.md  SECURITY_BEST_PRACTICES.md  SECURITY_FIXES_COMPLETED.md  STORAGE_MIGRATIONS.md  WHITEPAPER.md
pezkuwi/erasure-coding/: Cargo.toml
pezkuwi/erasure-coding/benches/: scaling_with_validators.rs
pezkuwi/erasure-coding/fuzzer/: Cargo.toml
pezkuwi/erasure-coding/src/: lib.rs
pezkuwi/grafana/: README.md
pezkuwi/grafana/general/: kusama_deployment.json
pezkuwi/grafana/parachains/: status.json
pezkuwi/monitoring/: alert-rules.yml  alertmanager.yml  docker-compose.yml  loki-config.yml  prometheus.yml  promtail-config.yml
pezkuwi/node/collation-generation/: Cargo.toml
pezkuwi/node/gum/: Cargo.toml  README.md
pezkuwi/node/malus/: Cargo.toml  README.md
pezkuwi/node/metrics/: Cargo.toml  README.md
pezkuwi/node/overseer/: Cargo.toml
pezkuwi/node/primitives/: Cargo.toml
pezkuwi/node/service/: Cargo.toml
pezkuwi/node/subsystem/: Cargo.toml
pezkuwi/node/subsystem-bench/: Cargo.toml  README.md
pezkuwi/node/subsystem-test-helpers/: Cargo.toml
pezkuwi/node/subsystem-types/: Cargo.toml
pezkuwi/node/subsystem-util/: Cargo.toml
pezkuwi/pallets/hemwelati-odul/: Cargo.toml
pezkuwi/pallets/identity-kyc/: Cargo.toml
pezkuwi/pallets/perwerde/: Cargo.toml
pezkuwi/pallets/pez-rewards/: Cargo.toml
pezkuwi/pallets/pez-treasury/: Cargo.toml
pezkuwi/pallets/referral/: Cargo.toml  uyari.txt
pezkuwi/pallets/staking-score/: Cargo.toml
pezkuwi/pallets/tiki/: Cargo.toml
pezkuwi/pallets/token-wrapper/: Cargo.toml
pezkuwi/pallets/trust/: Cargo.toml  uyari.txt
pezkuwi/pallets/validator-pool/: Cargo.toml
pezkuwi/pallets/welati/: Cargo.toml
pezkuwi/parachain/: Cargo.toml
pezkuwi/parachain/src/: lib.rs  primitives.rs  wasm_api.rs
pezkuwi/primitives/: Cargo.toml
pezkuwi/primitives/src/: lib.rs  runtime_api.rs  traits.rs
pezkuwi/primitives/test-helpers/: Cargo.toml
pezkuwi/roadmap/: parachains.md
pezkuwi/roadmap/implementers-guide/: README.md  book.toml  mermaid.min.js
pezkuwi/rpc/: Cargo.toml
pezkuwi/rpc/src/: lib.rs
pezkuwi/runtime/common/: Cargo.toml
pezkuwi/runtime/metrics/: Cargo.toml
pezkuwi/runtime/parachains/: Cargo.toml
pezkuwi/runtime/pezkuwichain/: Cargo.toml  README.md  build.rs
pezkuwi/runtime/rococo/: Cargo.toml  build.rs
pezkuwi/runtime/test-runtime/: Cargo.toml  build.rs
pezkuwi/runtime/validators/: beta_testnet_validators.json  beta_testnet_validators1.json  mainnet_validators.json  staging_validators.json
pezkuwi/runtime/westend/: Cargo.toml  build.rs
pezkuwi/scripts/: adder-collator.sh  build-production.sh  deploy-production.sh  run-tests.sh  two-node-local-net.sh
pezkuwi/scripts/list-syscalls/: list-syscalls.rb
pezkuwi/scripts/packaging/: polkadot.service
pezkuwi/src/: main.rs
pezkuwi/statement-table/: Cargo.toml
pezkuwi/statement-table/src/: generic.rs  lib.rs
pezkuwi/tests/: benchmark_block.rs  benchmark_extrinsic.rs  benchmark_overhead.rs  benchmark_storage_works.rs  common.rs  invalid_order_arguments.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs  workers.rs
pezkuwi/utils/generate-bags/: Cargo.toml
pezkuwi/validators/: beta_testnet_validators.json  mainnet_validators.json  staging_validators.json
pezkuwi/xcm/docs/: Cargo.toml
pezkuwi/xcm/pallet-xcm/: Cargo.toml
pezkuwi/xcm/src/: double_encoded.rs  lib.rs  tests.rs  utils.rs
pezkuwi/xcm/xcm-builder/: Cargo.toml
pezkuwi/xcm/xcm-simulator/: Cargo.toml
pezkuwi/zombienet-sdk-tests/: Cargo.toml
pezkuwi/zombienet_tests/: .set_env  README.md
pezkuwi/zombienet_tests/functional/: 0001-parachains-pvf.zndsl  0002-parachains-disputes.toml  0002-parachains-disputes.zndsl  0003-beefy-and-mmr.toml  0004-parachains-garbage-candidate.toml  0004-parachains-garbage-candidate.zndsl  0006-parachains-max-tranche0.toml  0006-parachains-max-tranche0.zndsl  0007-dispute-freshly-finalized.toml  0007-dispute-freshly-finalized.zndsl  0008-dispute-old-finalized.toml  0009-approval-voting-coalescing.zndsl  0010-validator-disabling.toml  0010-validator-disabling.zndsl  0013-systematic-chunk-recovery.toml  0013-systematic-chunk-recovery.zndsl  0014-chunk-fetching-network-compatibility.toml  0014-chunk-fetching-network-compatibility.zndsl  0015-coretime-shared-core.toml  0018-shared-core-idle-parachain.toml  0019-coretime-collation-fetching-fairness.toml
pezkuwi/zombienet_tests/misc/: 0001-paritydb.toml  0001-paritydb.zndsl  0002-download-polkadot-from-pr.sh  0002-upgrade-node.zndsl  0003-parathreads.toml
pezkuwi/zombienet_tests/smoke/: 0001-parachains-smoke-test.toml  0002-parachains-upgrade-smoke-test.toml  0003-deregister-register-validator-smoke.toml  0003-deregister-register-validator-smoke.zndsl  0004-coretime-smoke-test.toml  0005-precompile-pvf-smoke.toml  0005-precompile-pvf-smoke.zndsl
(+2927 files in other folders)
