[[bin]]
name = "pezkuwi"
path = "src/main.rs"

[[bin]]
name = "pezkuwi-execute-worker"
path = "src/bin/execute-worker.rs"

[[bin]]
name = "pezkuwi-prepare-worker"
path = "src/bin/prepare-worker.rs"

[package]
name = "pezkuwi"
description = "Implementation of a `https://pezkuwi.network` node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
rust-version = "1.64.0"
readme = "README.md"
authors.workspace = true
edition.workspace = true
version = "22.0.0"
default-run = "pezkuwi"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre = { workspace = true }
pezkuwi-cli = { features = ["rococo-native", "westend-native"], workspace = true, default-features = true }
pezkuwi-node-core-pvf-common.default-features = true
pezkuwi-node-core-pvf-common.workspace = true
pezkuwi-node-core-pvf-execute-worker.default-features = true
pezkuwi-node-core-pvf-execute-worker.workspace = true
pezkuwi-node-core-pvf-prepare-worker.default-features = true
pezkuwi-node-core-pvf-prepare-worker.workspace = true
pezkuwi-node-core-pvf.default-features = true
pezkuwi-node-core-pvf.workspace = true
pezkuwi-overseer.default-features = true
pezkuwi-overseer.workspace = true
tikv-jemallocator = { optional = true, features = ["unprefixed_malloc_on_supported_platforms"], workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { workspace = true, features = ["unprefixed_malloc_on_supported_platforms"] }

[dev-dependencies]
assert_cmd = { workspace = true }
nix = { features = ["signal"], workspace = true }
pezkuwi-core-primitives = { default-features = true, workspace = true }
substrate-rpc-client = { default-features = true, workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, default-features = true }

[build-dependencies]
substrate-build-script-utils.default-features = true
substrate-build-script-utils.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[features]
runtime-benchmarks = ["pezkuwi-cli/runtime-benchmarks"]
try-runtime = ["pezkuwi-cli/try-runtime"]
fast-runtime = ["pezkuwi-cli/fast-runtime"]
runtime-metrics = ["pezkuwi-cli/runtime-metrics"]
pyroscope = ["pezkuwi-cli/pyroscope"]
jemalloc-allocator = [
	"dep:tikv-jemallocator",
	"pezkuwi-node-core-pvf-prepare-worker/jemalloc-allocator",
	"pezkuwi-node-core-pvf/jemalloc-allocator",
	"pezkuwi-overseer/jemalloc-allocator",
]

# Generate the metadata hash needed for CheckMetadataHash
# in the builtin test runtimes (westend and rococo).
metadata-hash = [
	"pezkuwi-cli/metadata-hash",
]

# Enables timeout-based tests supposed to be run only in CI environment as they may be flaky
# when run locally depending on system load
ci-only-tests = ["pezkuwi-node-core-pvf/ci-only-tests"]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "pezkuwi"
extended-description = "Implementation of a https://pezkuwi.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "security@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	[
		"target/release/pezkuwi",
		"/usr/bin/",
		"755",
	],
	[
		"target/release/pezkuwi-prepare-worker",
		"/usr/lib/pezkuwi/",
		"755",
	],
	[
		"target/release/pezkuwi-execute-worker",
		"/usr/lib/pezkuwi/",
		"755",
	],
	[
		"scripts/packaging/pezkuwi.service",
		"/lib/systemd/system/",
		"644",
	],
]
conf-files = ["/etc/default/pezkuwi"]

[package.metadata.spellcheck]
config = "./scripts/ci/gitlab/spellcheck.toml"
