[package]
name = "pezkuwi-cli"
description = "Pezkuwi Relay-chain Client Node"
version = "23.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { features = ["derive"], optional = true, workspace = true }
frame-benchmarking-cli = { optional = true, workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
pezkuwi-node-metrics.default-features = true
pezkuwi-node-metrics.workspace = true
pezkuwi-node-primitives.default-features = true
pezkuwi-node-primitives.workspace = true
pezkuwi-service = { optional = true, workspace = true }
pyroscope = { optional = true, workspace = true }
pyroscope_pprofrs = { optional = true, workspace = true }
sc-cli = { optional = true, workspace = true, default-features = true }
sc-service = { optional = true, workspace = true, default-features = true }
sc-storage-monitor.default-features = true
sc-storage-monitor.workspace = true
sc-sysinfo.default-features = true
sc-sysinfo.workspace = true
sc-tracing = { optional = true, workspace = true, default-features = true }
sp-core.default-features = true
sp-core.workspace = true
sp-keyring.default-features = true
sp-keyring.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true
thiserror = { workspace = true }

[build-dependencies]
substrate-build-script-utils.default-features = true
substrate-build-script-utils.workspace = true

[features]
default = ["cli", "db", "full-node", "pezkuwi-native"]
db = ["pezkuwi-service/db"]
metadata-hash = ["pezkuwi-service/metadata-hash"]
service = ["dep:pezkuwi-service"]
cli = [
	"clap",
	"frame-benchmarking-cli",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"service",
]
runtime-benchmarks = [
	"frame-benchmarking-cli?/runtime-benchmarks",
	"pezkuwi-node-metrics/runtime-benchmarks",
	"pezkuwi-service?/runtime-benchmarks",
	"sc-service?/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
full-node = ["pezkuwi-service/full-node"]
try-runtime = [
	"pezkuwi-service?/try-runtime",
	"sp-runtime/try-runtime",
]
fast-runtime = ["pezkuwi-service/fast-runtime"]
pyroscope = ["dep:pyroscope", "pyroscope_pprofrs"]

# Configure the native runtimes to use.
westend-native = ["pezkuwi-service/westend-native"]
rococo-native = ["pezkuwi-service/rococo-native"]
pezkuwi-native = ["pezkuwi-service/pezkuwi-native"]

malus = ["full-node", "pezkuwi-service/malus"]
runtime-metrics = [
	"pezkuwi-node-metrics/runtime-metrics",
	"pezkuwi-service/runtime-metrics",
]
