[package]
name = "pezkuwi-core-primitives"
version = "17.1.0"
description = "Core Pezkuwi types used by Relay Chains and parachains."
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-core.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
