[package]
name = "bp-bridge-hub-cumulus"
description = "Primitives for BridgeHub parachain runtimes."
version = "0.21.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[package.metadata.pezkuwi-sdk]
exclude-from-umbrella = true

[lints]
workspace = true

[dependencies]
bp-messages.workspace = true
bp-pezkuwi-core.workspace = true
bp-runtime.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pezkuwi-primitives.workspace = true
sp-api.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-pezkuwi-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pezkuwi-primitives/std",
	"sp-api/std",
	"sp-std/std",
]
