[package]
name = "bp-westend"
description = "Primitives of Westend runtime."
version = "0.16.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[package.metadata.pezkuwi-sdk]
exclude-from-umbrella = true

[lints]
workspace = true

[dependencies]
bp-header-chain.workspace = true
bp-pezkuwi-core.workspace = true
bp-runtime.workspace = true
frame-support.workspace = true
sp-api.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-pezkuwi-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-std/std",
]
