[package]
name = "cumulus-client-network"
version = "0.22.0"
authors.workspace = true
description = "Cumulus-specific networking protocol"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codec = { features = ["derive"], workspace = true, default-features = true }
cumulus-relay-chain-interface.default-features = true
cumulus-relay-chain-interface.workspace = true
futures = { workspace = true }
futures-timer = { workspace = true }
parking_lot = { workspace = true, default-features = true }
pezkuwi-node-primitives.default-features = true
pezkuwi-node-primitives.workspace = true
pezkuwi-node-subsystem.default-features = true
pezkuwi-node-subsystem.workspace = true
pezkuwi-parachain-primitives.default-features = true
pezkuwi-parachain-primitives.workspace = true
pezkuwi-primitives.default-features = true
pezkuwi-primitives.workspace = true
sc-client-api.default-features = true
sc-client-api.workspace = true
sp-api.default-features = true
sp-api.workspace = true
sp-blockchain.default-features = true
sp-blockchain.workspace = true
sp-consensus.default-features = true
sp-consensus.workspace = true
sp-core.default-features = true
sp-core.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true
sp-state-machine.default-features = true
sp-state-machine.workspace = true
sp-version.default-features = true
sp-version.workspace = true
tracing = { workspace = true, default-features = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { features = ["macros"], workspace = true, default-features = true }

# Substrate
sc-client-api = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }

# Pezkuwi
pezkuwi-test-client = { workspace = true }

# Cumulus
cumulus-primitives-core = { default-features = true, workspace = true }
cumulus-relay-chain-inprocess-interface = { default-features = true, workspace = true }
cumulus-test-service = { workspace = true }
