[package]
authors.workspace = true
name = "cumulus-relay-chain-minimal-node"
version = "0.23.1"
edition.workspace = true
description = "Minimal node implementation to be used in tandem with RPC or light-client mode."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cumulus-primitives-core.default-features = true
cumulus-primitives-core.workspace = true
cumulus-relay-chain-interface.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-rpc-interface.default-features = true
cumulus-relay-chain-rpc-interface.workspace = true
pezkuwi-core-primitives.default-features = true
pezkuwi-core-primitives.workspace = true
pezkuwi-network-bridge.default-features = true
pezkuwi-network-bridge.workspace = true
pezkuwi-node-network-protocol.default-features = true
pezkuwi-node-network-protocol.workspace = true
pezkuwi-node-subsystem-util.default-features = true
pezkuwi-node-subsystem-util.workspace = true
pezkuwi-overseer.default-features = true
pezkuwi-overseer.workspace = true
pezkuwi-primitives.default-features = true
pezkuwi-primitives.workspace = true
pezkuwi-service.default-features = true
pezkuwi-service.workspace = true
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
sc-authority-discovery.default-features = true
sc-authority-discovery.workspace = true
sc-client-api.default-features = true
sc-client-api.workspace = true
sc-network-common.default-features = true
sc-network-common.workspace = true
sc-network.default-features = true
sc-network.workspace = true
sc-service.default-features = true
sc-service.workspace = true
sc-tracing.default-features = true
sc-tracing.workspace = true
sc-utils.default-features = true
sc-utils.workspace = true
sp-api.default-features = true
sp-api.workspace = true
sp-blockchain.default-features = true
sp-blockchain.workspace = true
sp-consensus-babe.default-features = true
sp-consensus-babe.workspace = true
sp-consensus.default-features = true
sp-consensus.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true

array-bytes = { workspace = true, default-features = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true, default-features = true }
