[package]
name = "cumulus-primitives-core"
version = "0.18.1"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Cumulus related core primitive types and traits"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
pezkuwi-core-primitives.workspace = true
pezkuwi-parachain-primitives.workspace = true
pezkuwi-primitives.workspace = true
scale-info = { features = ["derive"], workspace = true }
sp-api.workspace = true
sp-runtime.workspace = true
sp-trie.workspace = true
xcm.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"pezkuwi-core-primitives/std",
	"pezkuwi-parachain-primitives/std",
	"pezkuwi-primitives/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-trie/std",
	"xcm/std",
]
runtime-benchmarks = [
	"pezkuwi-parachain-primitives/runtime-benchmarks",
	"pezkuwi-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
