[package]
name = "pezkuwi-node-collation-generation"
version = "22.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Collator-side subsystem that handles incoming candidate submissions from the parachain."
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { features = ["bit-vec", "derive"], workspace = true }
futures = { workspace = true }
gum.default-features = true
gum.workspace = true
pezkuwi-erasure-coding.default-features = true
pezkuwi-erasure-coding.workspace = true
pezkuwi-node-primitives.default-features = true
pezkuwi-node-primitives.workspace = true
pezkuwi-node-subsystem-util.default-features = true
pezkuwi-node-subsystem-util.workspace = true
pezkuwi-node-subsystem.default-features = true
pezkuwi-node-subsystem.workspace = true
pezkuwi-primitives.default-features = true
pezkuwi-primitives.workspace = true
schnellru = { workspace = true }
sp-core.default-features = true
sp-core.workspace = true
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pezkuwi-node-subsystem-test-helpers = { workspace = true }
pezkuwi-primitives = { features = ["test"], default-features = false, workspace = true }
pezkuwi-primitives-test-helpers = { workspace = true }
rstest = { workspace = true }
sp-keyring = { default-features = true, workspace = true }
