[package]
name = "pezkuwi-overseer"
version = "22.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "System overseer of the Pezkuwi node"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
gum.default-features = true
gum.workspace = true
orchestra = { features = ["futures_channel"], workspace = true }
pezkuwi-node-metrics.default-features = true
pezkuwi-node-metrics.workspace = true
pezkuwi-node-network-protocol.default-features = true
pezkuwi-node-network-protocol.workspace = true
pezkuwi-node-primitives.default-features = true
pezkuwi-node-primitives.workspace = true
pezkuwi-node-subsystem-types.default-features = true
pezkuwi-node-subsystem-types.workspace = true
pezkuwi-primitives.default-features = true
pezkuwi-primitives.workspace = true
sc-client-api.default-features = true
sc-client-api.workspace = true
sp-core.default-features = true
sp-core.workspace = true
tikv-jemalloc-ctl = { optional = true, workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
femme = { workspace = true }
futures = { features = ["thread-pool"], workspace = true }
metered = { features = ["futures_channel"], workspace = true }
pezkuwi-node-subsystem-test-helpers = { workspace = true }
pezkuwi-primitives-test-helpers = { workspace = true }
sp-core = { default-features = true, workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemalloc-ctl = { workspace = true }

[features]
default = ["futures_channel"]
expand = ["orchestra/expand"]
futures_channel = ["orchestra/futures_channel"]
jemalloc-allocator = ["dep:tikv-jemalloc-ctl"]
