[package]
name = "pezkuwi-node-subsystem-util"
description = "Subsystem traits and message definitions"
version = "22.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
fatality = { workspace = true }
futures = { workspace = true }
gum.default-features = true
gum.workspace = true
itertools = { workspace = true }
parking_lot = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
schnellru = { workspace = true }
thiserror = { workspace = true }

metered = { features = ["futures_channel"], workspace = true }
pezkuwi-erasure-coding.default-features = true
pezkuwi-erasure-coding.workspace = true
pezkuwi-node-metrics.default-features = true
pezkuwi-node-metrics.workspace = true
pezkuwi-node-network-protocol.default-features = true
pezkuwi-node-network-protocol.workspace = true
pezkuwi-node-primitives.default-features = true
pezkuwi-node-primitives.workspace = true
pezkuwi-node-subsystem-types.default-features = true
pezkuwi-node-subsystem-types.workspace = true
pezkuwi-node-subsystem.default-features = true
pezkuwi-node-subsystem.workspace = true
pezkuwi-overseer.default-features = true
pezkuwi-overseer.workspace = true
pezkuwi-primitives.default-features = true
pezkuwi-primitives.workspace = true
sc-client-api.default-features = true
sc-client-api.workspace = true
sp-application-crypto.default-features = true
sp-application-crypto.workspace = true
sp-core.default-features = true
sp-core.workspace = true
sp-keystore.default-features = true
sp-keystore.workspace = true

kvdb = { workspace = true }
parity-db = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
futures = { features = ["thread-pool"], workspace = true }
kvdb-shared-tests = { workspace = true }
pezkuwi-node-subsystem-test-helpers = { workspace = true }
pezkuwi-primitives-test-helpers = { workspace = true }
tempfile = { workspace = true }
