[package]
name = "pezkuwi-node-subsystem"
description = "Subsystem traits and message definitions and the generated overseer"
version = "22.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pezkuwi-node-subsystem-types.default-features = true
pezkuwi-node-subsystem-types.workspace = true
pezkuwi-overseer.default-features = true
pezkuwi-overseer.workspace = true
